--- a/frontend/src/modules/Navbar.css
+++ b/frontend/src/modules/Navbar.css
@@ -89,3 +89,20 @@ button:focus {
     width: 100px;
     height: 55px
 }
+
+input[type="checkbox"] {
+    /* -webkit-appearance: none; */
+    /* appearance: none; */
+    /* background-color: #fff; */
+    margin: 0;
+    font: inherit;
+    color: currentColor;
+    width: 17px;
+    height: 17px;
+    border: 0.15em solid rgb(210, 210, 210);
+    border-radius: 0.15em;
+}
+
+input[type="checkbox"]:checked {
+    background-color: #45a049;
+}
