--- a/frontend/src/modules/Leyend.css
+++ b/frontend/src/modules/Leyend.css
@@ -1,12 +1,14 @@
-.wrapper {
+.legend-wrapper {
     position: absolute;
     bottom: 0;  
     left: 0;
-    width: 450px;
+    width: 300px;
+    /* width: auto; */
     /* height: auto; */
     
     display: flex;
     border-radius: 15px;
+    flex-direction: row;
     background-color: rgba(0, 0, 0, 0.8);
     font-size: smaller;
 }
