--- a/frontend/src/modules/VisController.css
+++ b/frontend/src/modules/VisController.css
@@ -2,19 +2,19 @@
     position: absolute;
     bottom: 0;
     right: 0;
-    width: auto;
+    width: 350px;
     height: auto;
-
     display: flex;
     flex-direction: row-reverse;
+    align-items: flex-end;
     border-radius: 15px;
     background-color: rgba(0, 0, 0, 0.8);
     font-size: smaller;
 }
 
-.controller-element {
-    padding-left: 30px;
-    padding-right: 30px;
+.controller-content {
+    width: 100%;
+    margin:5% 
 }
 
 .color-selector {
@@ -25,6 +25,7 @@
 .dropdown {
     position: relative;
     display: inline-block;
+    color: rgb(0, 0, 0);
 }
 
 .dropdown-toggle {
@@ -48,7 +49,7 @@
     padding: 0;
     margin: 0;
     list-style: none;
-    background-color: #000000;
+    background-color: rgba(75, 75, 75, 0.95);
 }
 
 .dropdown-item {
@@ -59,10 +60,12 @@
 }
 
 .gradient {
+    /* width: 100%; */
+    /* height: 25px; */
     width: 50px;
     height: 20px;
-    margin-right: 10px;
-    border-radius: 3px;
+    /* margin-right: 10px; */
+    /* border-radius: 3px; */
 }
 
 .scheme-name {
