--- a/frontend/src/modules/Legend.css
+++ b/frontend/src/modules/Legend.css
@@ -12,13 +12,13 @@
     display: flex;
     flex-direction: row;
 }
-.leyend-closed {
+.legend-closed {
     width: 100%;
     display: flex;
     flex-direction: row;
 }
 
-.leyend-content {
+.legend-content {
     width: 100%;
     height: 100%;
     display: flex;
@@ -32,9 +32,9 @@
     align-self: flex-end;
 }
 
-.leyend-button {
+.legend-button {
     width: 45px;
-    height: 45px
+    height: 45px;
     background-color: rgba(0, 0, 0, 0);
 }
 
